# snacks-api

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
snacks/: admin.py  models.py  urls.py
snacks/api/: serializers.py  viewsets.py
snacks/migrations/: 0001_initial.py
snacks_api/: settings.py  urls.py
